--- a/index.html
+++ b/index.html
@@ -26,24 +26,27 @@
                 </h>
                 <button type="button">Замовити послугу</button>
         </section>
-        <ul>
-            <li>
-                <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-                <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-            </li>
-            <li>
-                <h3>ПУНКТУАЛЬНІСТЬ</h3>
-                <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-            </li>
-            <li>
-                <h3>ПЛАНУВАННЯ</h3>
-                <p>Так само консультація з широким активом значною мірою зумовлює.</p>
-            </li>
-            <li>
-                <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-            </li>
-        </ul>
+        <section>
+            <h2>Наші переваги</h2>
+            <ul>
+                <li>
+                    <p>УВАГА ДО ДЕТАЛЕЙ</p>
+                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                </li>
+                <li>
+                    <p>ПУНКТУАЛЬНІСТЬ</p>
+                    <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                </li>
+                <li>
+                    <p>ПЛАНУВАННЯ</p>
+                    <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+                </li>
+                <li>
+                    <p>СУЧАСНІ ТЕХНОЛОГІЇ</p>
+                    <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                </li>
+            </ul>
+        </section>
         <section>
             <h2>Чим ми займаємося</h2>
             <ul>
@@ -56,23 +59,23 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./image/Product Designer.jpg" alt="Хлопець в окулярах" width="270">
-                    <p>Ігор Дем'яненко</p>
+                    <img src="./image/product designer.jpg" alt="Хлопець в окулярах" width="270">
+                    <h3>Ігор Дем'яненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./image/Frontend Developer.jpg" alt="Блондінка в окулярах" width="270">
-                    <p>Ольга Рєпіна</p>
+                    <img src="./image/frontend developer.jpg" alt="Блондінка в окулярах" width="270">
+                    <h3>Ольга Рєпіна</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./image/Marketing.jpg" alt="Неголений хлопець" width="270">
-                    <p>Микола Тарасов</p>
+                    <img src="./image/marketing.jpg" alt="Неголений хлопець" width="270">
+                    <h3>Микола Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./image/UI Designer.jpg" alt="Хлопець в окулярах та футболці" width="270">
-                    <p>Михайло Єрмаков</p>
+                    <img src="./image/ui designer.jpg" alt="Хлопець в окулярах та футболці" width="270">
+                    <h3>Михайло Єрмаков</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
@@ -83,7 +86,8 @@
         <address id="contacts">
             <ul>
                 <li>
-                    <a href="https://www.google.com.ua/maps" target="_blank">
+                    <a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+                        target="_blank" rel="noopener noreferrer nofollow">
                         м. Київ, пр-т Лесі Українки, 26
                     </a>
                 </li>
