--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     <main>
         <section>
-            <h1>Ефективні рішення для вашого бізнесу</h> <br/>
+            <h1>Ефективні рішення для вашого бізнесу</h1> 
                 <button type="button">Замовити послугу</button>
         </section>
         <section>
@@ -50,21 +50,21 @@
         <section>
             <h2>Чим ми займаємося</h2>
             <ul>
-                <li><img src="./image/box 1.jpg" alt="Планшет и клавиатура" width="370"></li>
-                <li><img src="./image/box 2.jpg" alt="Телефон и ноутбук" width="370"></li>
-                <li><img src="./image/box 3.jpg" alt="Планшет" width="370"></li>
+                <li><img src="./image/box_1.jpg" alt="Планшет та клавиатура" width="370"></li>
+                <li><img src="./image/box_2.jpg" alt="Телефон та ноутбук" width="370"></li>
+                <li><img src="./image/box_3.jpg" alt="Планшет" width="370"></li>
             </ul>
         </section>
         <section>
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./image/product designer.jpg" alt="Хлопець в окулярах" width="270">
+                    <img src="./image/product_designer.jpg" alt="Хлопець в окулярах" width="270">
                     <h3>Ігор Дем'яненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./image/frontend developer.jpg" alt="Блондінка в окулярах" width="270">
+                    <img src="./image/frontend_developer.jpg" alt="Блондінка в окулярах" width="270">
                     <h3>Ольга Рєпіна</h3>
                     <p>Frontend Developer</p>
                 </li>
@@ -74,7 +74,7 @@
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./image/ui designer.jpg" alt="Хлопець в окулярах та футболці" width="270">
+                    <img src="./image/ui_designer.jpg" alt="Хлопець в окулярах та футболці" width="270">
                     <h3>Михайло Єрмаков</h3>
                     <p>UI Designer</p>
                 </li>
@@ -99,7 +99,6 @@
                 </li>
             </ul>
         </address>
-        </ul>
     </footer>
 </body>
 </html>
