--- a/index.html
+++ b/index.html
@@ -59,22 +59,22 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./image/product_designer.jpg" alt="Хлопець в окулярах" width="270">
+                    <img src="./image/product_designer1.jpg" alt="Хлопець в окулярах" width="270">
                     <h3>Ігор Дем'яненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./image/frontend_developer.jpg" alt="Блондінка в окулярах" width="270">
+                    <img src="./image/frontend_developer1.jpg" alt="Блондінка в окулярах" width="270">
                     <h3>Ольга Рєпіна</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./image/marketing.jpg" alt="Неголений хлопець" width="270">
+                    <img src="./image/marketing1.jpg" alt="Неголений хлопець" width="270">
                     <h3>Микола Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./image/ui_designer.jpg" alt="Хлопець в окулярах та футболці" width="270">
+                    <img src="./image/ui_designer1.jpg" alt="Хлопець в окулярах та футболці" width="270">
                     <h3>Михайло Єрмаков</h3>
                     <p>UI Designer</p>
                 </li>
